Fix description truncated and fa-icon on middle.

--- a/includes/css/teampass.css
+++ b/includes/css/teampass.css
@@ -74,6 +74,7 @@
     line-height: 50px;
 }
 
+.list-item-clicktoshow .user-fa-icon,
 .list-item-description .dragndrop {
     line-height: 50px;
 }
